--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section id="main">
         <h1 id="mainTitle"></h1>
     </section>
+    <audio id="bgm" autoplay loop></audio>
 
     <footer>
         <p>Copyright: Zamir Loshi - 2024</p>
