location change works

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <section id="main">
         <h1 id="mainTitle"></h1>
     </section>
+    <form id="locationSelect">
+        <input type="text" placeholder="NewYork">
+        <input type="text" id ="lat" placeholder="40.705">
+        <input type="text" id="long" placeholder="73.975">
+        <button type="button" onclick="changeLocation()">Change Location</button>
+    </form>
     <audio id="bgm" autoplay loop></audio>
 
     <footer>
