--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 </head>
 <body>
     <section id="main">
-        <h1 id="mainTitle"></h1>
     </section>
     <form id="locationSelect">
         <fieldset>
             <label for="location">Select Location</label>
-            <input type="text" id="location" placeholder="NewYork">
+            <input type="text" id="location" placeholder="NewYork" onblur="getCities().then(autofill)">
         </fieldset>
         <fieldset>
             <label for="lat">Latitude</label>
