added way to manually select the weather to be displayed

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
        
     </fieldset>
     </form>
+
+    <form>
+        <h2>Want to experience all the weather effects?</h2>
+        <p>Select your desired weather</p>
+        <select id="weatherSelect" onchange="changeWeather()">
+            <option id="clear" value="0">Clear</option>
+            <option id="clear" value="86">Snow</option>
+            <option id="clear" value="82">Rain</option>
+            <option id="clear" value="95">Thunderstorm</option>
+        </select>
+    </form>
     <audio id="bgm" autoplay loop></audio>
 
     <footer>
